[package]
name = "relex"
version = "0.1.0"
edition = "2021"

[dependencies]
parcel = { git = "https://github.com/ncatelli/parcel", tag = "v2.0.1" }
regex-compiler = { git = "https://github.com/ncatelli/regex", branch = "main" }
regex-runtime = { git = "https://github.com/ncatelli/regex", branch = "main" }
