[package]
name = "relex"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
workspace = ".."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parcel = { git = "https://github.com/ncatelli/parcel", tag = "v2.0.1" }
relex-runtime = { path = "../runtime/" }
