[package]
name = "relex-runtime"
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
workspace = ".."

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "exponential_scaling_of_input"
path = "benches/exponential.rs"
harness = false

[dependencies]
collections-ext = { git = "https://github.com/ncatelli/collections-ext", branch = "main" }
